# real-time-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  terraform.tfstate
infrastructure/: main.tf
infrastructure/modules/api_gateway/: main.tf
infrastructure/modules/firehose/: main.tf
infrastructure/modules/lambda_firehose_transform/: main.tf  outputs.tf
infrastructure/modules/lambda_processor/: main.tf  outputs.tf
infrastructure/modules/processor/cold_path/musical_profile_function/: main.tf  outputs.tf
infrastructure/modules/processor/cold_path/processor_function/: main.tf  outputs.tf
infrastructure/modules/processor/hot_path/put_event_function/: main.tf  outputs.tf
infrastructure/modules/storage/: main.tf  outputs.tf
infrastructure/modules/streaming/: main.tf  outputs.tf
src/: main.py
src/processor/: cold_path_function.py  cold_path_musical_profile_function.py  cold_path_processor_function.py  function.py  hot_path_function.py  hot_path_put_event_function.py  requirements.txt
src/producer/: app.py  auth.py  main.py  services.py  tracker.py
src/recommender/: main.py  services.py
