[project]
name = "real-time-recommendation"
version = "0.1.0"
description = "Real-time clickstream/telemetry with Spotify + AWS (Kinesis, Lambda, DynamoDB) and Infrastructure as Code."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.41.2",
    "dotenv>=0.9.9",
    "logging>=0.4.9.6",
    "pandas>=2.3.3",
    "spotipy>=2.25.1",
]
